[gd_scene load_steps=6 format=3 uid="uid://de27dkellnlie"]

[ext_resource type="Script" path="res://scenes/objects/chest.gd" id="1_4her4"]
[ext_resource type="Texture2D" uid="uid://icbt75u5x1nh" path="res://graphics/objects/chest_opened.png" id="2_ugy6j"]
[ext_resource type="Texture2D" uid="uid://bjrdk0b4l1v28" path="res://graphics/objects/chest.png" id="3_nucpb"]
[ext_resource type="Texture2D" uid="uid://p74ebnemke8e" path="res://graphics/circle.png" id="4_d831g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p7ccg"]
size = Vector2(83, 26)

[node name="Chest" type="Node2D"]
script = ExtResource("1_4her4")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_p7ccg")

[node name="Powerup" type="Node2D" parent="."]
visible = false

[node name="SpriteOpened" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_ugy6j")

[node name="SpriteClosed" type="Sprite2D" parent="."]
texture = ExtResource("3_nucpb")

[node name="PointLight2D" type="PointLight2D" parent="."]
texture = ExtResource("4_d831g")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
